--- a/style/style.css
+++ b/style/style.css
@@ -26,19 +26,20 @@ div input {
 	border: none;
     outline: none;
 }
-span#idAlert{
+span#loginAlert{
     display: block;
-    position: relative;
-    top: 0;
-    left: 0;
-    font-size: 13px;
-
+    width: 410px;
+    font-size: 20px;
+    color: #ff0000;
+    font-size: 18px;
+    display: none;
+    text-align: center;
+    padding: 3px;
+    margin-top: 15px;
+    text-decoration: underline;
 }
 
 
-div input#uId::placeholder{
-
-}
 
 div button {
 	width: 120px;
